--- a/main.css
+++ b/main.css
@@ -59,7 +59,6 @@ nav>ul li a{
     color: #ffffff;
     padding: 6px 40px 15px 40px;
     transition: background-color 0.2s ease;
-    
     text-decoration: none;
 }
 
@@ -115,8 +114,6 @@ section{
     display: block;
     width: 80%;
     height: 250px;
-    
-    
     margin: 25px 1% 0px 2%;
     border:10px solid rgb(252, 197, 43);
 }
@@ -125,11 +122,14 @@ section{
    
     display: block;
     width: 80%;
-    height: 250px;
-    
-   
+    height: 200px;
     margin: 25px 1% 0px 2%;
     border:10px solid rgb(252, 197, 43);
+    transition: height 2s steps(3);
+}
+
+.imageprod2:hover {
+    height:250px;
 }
 
 .inside {
@@ -145,10 +145,6 @@ section{
 
 .containertext:hover .imageprod {
     opacity: 0.3; /* cuando sale la cajetilla de dentro la imagen principal se difumina*/
-}
-
-.containertext:hover .imageprod2 {
-    opacity: 0.3;
 }
 
 .containertext:hover .inside {
