--- a/main.css
+++ b/main.css
@@ -12,9 +12,6 @@
 
 }
 
-
-/*Barra de Navegacion*/
-
 nav{
     overflow: hidden;
     background-color: #1C83C5;
@@ -33,7 +30,7 @@ nav{
  
 }
 
-nav>ul{ /*solo afecta al ul directamente hijo del nav*/
+nav>ul{ 
     list-style: none;
     padding: 0;
     margin: 0;
@@ -68,14 +65,15 @@ nav>ul li a:hover{
     text-decoration: none;
 }
 
-/*main*/
 
 body{
     background:linear-gradient(rgba(255,255,255,.5), rgba(255,255,255,.5)),url(fondo-contacto.jpg);
     background-repeat: no-repeat;
-    
     background-size: cover;
     
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    margin:5px;
+    font-size: 20px;
 }
 
 section{
@@ -130,6 +128,20 @@ section{
 
 .imageprod2:hover {
     height:250px;
+}
+.imageprod4 {
+   
+    display: block;
+    width: 80%;
+    height: 200px;
+    margin: 25px 1% 0px 2%;
+    border:10px solid rgb(252, 197, 43);
+    transition: width 2s, height 4s, transform 2s;
+    transition-delay: 1s;
+}
+
+.imageprod4:hover {
+    transform: rotate(360deg);
 }
 
 .inside {
